Fixes jdk 1.7 compilation errors
* Using jdk 1.7, the classes Base64 and ZoneId are not available hence
  require replacements in order for the project to correctly compile.